objects/Related_Country__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Related Countries</relationshipLabel>
        <relationshipName>Related_Countries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Related Countries</relationshipLabel>
        <relationshipName>Related_Countries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ISO_Code_2__c</fullName>
        <label>ISO Code (2)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Code_3__c</fullName>
        <label>ISO Code (3)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Synced_D_T__c</fullName>
        <label>Last Synced D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_D_T__c</fullName>
        <label>Last Updated D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Related Country</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>Related Country Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>